2004-03-30  Galit Heller  <Galit.Heller@nsc.com>

	* Makefile.am (ALL_EMULATIONS): Add eelf32cr16c.o.
	(eelf32cr16c.c): New target.
	* Makefile.in: Regenerate.
	* configure.tgt: Handle cr16c-*-elf*.
	* emulparams/elf32cr16c.sh: New file.
	* scripttempl/elfcr16c.sc: Likewise
	* NEWS: Mention support for new target.

2004-03-30  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2004-03-27  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em: Update new bfd_elf_discard_info name.
	* emultempl/hppaelf.em: Likewise.
	* emultempl/ppc64elf.em: Likewise.
	* emultempl/sh64elf.em: Likewise.

2004-03-25  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em (gld${EMULATION_NAME}_before_allocation): Update
	size_dynamic_sections call.

2004-03-23  Alan Modra  <amodra@bigpond.net.au>

	PR 51.
	* emultempl/ppc64elf.em (ppc_create_output_section_statements): Set
	link_info.wrap_char.

2004-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	* lexsup.c (parse_args): Don't set unresolved_syms_in_objects
	or unresolved_syms_in_shared_libs for -Bdynamic and -Bstatic.

2004-03-20  Alexandre Oliva  <aoliva@redhat.com>

	* emulparams/elf32frvfd.sh (MAXPAGESIZE): Change to 16Kb.

2004-03-19  Alan Modra  <amodra@bigpond.net.au>

	* config.in: Regenerate.
	* po/ld.pot: Regenerate.

2004-03-18  Alan Modra  <amodra@bigpond.net.au>

	* ld.texinfo: Add --as-needed doco.
	* ldmain.c (as_needed): New global var.
	* ldmain.h (as_needed): Declare.
	* lexsup.c (option_values): Add OPTION_AS_NEEDED and
	OPTION_NO_AS_NEEDED.
	(ld_options): Likewise.
	(parse_args): Handle them.
	* ldlang.h (lang_input_statement_type): Add as_needed field.
	* ldlang.c (new_afile): Set p->as_needed.
	* emultempl/elf32.em (gld${EMULATION_NAME}_load_symbols): New function.
	(gld${EMULATION_NAME}_try_needed): Use bfd_elf_set_dyn_lib_class.
	(ld_${EMULATION_NAME}_emulation): Set LDEMUL_RECOGNIZED_FILE entry.

	* ldlang.c (open_input_bfds): Remove useless cast.
	(lang_do_assignments_1): Likewise.